# Decision-Intelligence-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  notebook.ipynb
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/routers/: llm.py  ml.py
backend/app/services/: feature_engineering.py  llm_service.py  ml_service.py  retrieval_service.py
backend/chroma_db/: .gitkeep
backend/scripts/: prepare_rag.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Analysis.jsx  Header.jsx  RecentQueries.jsx  Sidebar.jsx
