[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pandas>=3.0.2",
    "chromadb>=1.5.8",
    "sentence-transformers>=5.4.1",
    "kagglehub>=0.1.0",
    "joblib>=1.5.3",
    "scikit-learn==1.6.1",
    "textblob>=0.20.0",
    "groq>=1.2.0",
]
